# goit-ds-hw-02

./: pyproject.toml
src/goit_ds_hw_02/: create_db.py  seed.py  select.py  users_tasks.db  users_tasks.sql
